--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
-<mat-toolbar id="title" color="primary">
-    <span>{{title}}</span>
-    <div *ngIf="!isAuth();else profile">
+<mat-toolbar class="title" color="primary">
+    <span>Shop</span>
+    <div *ngIf="!isAuth;else profile">
         <button mat-flat-button color="accent" (click)="auth(false)">Sign in</button>
         <button mat-flat-button color="warn" (click)="auth(true)">Sign up</button>
     </div>
     <ng-template #profile>
-        <button mat-flat-button>{{user.name}}</button>
+        <button mat-flat-button>{{user?.name}}</button>
         <button mat-icon-button matTooltip="Sign out" (click)="out()">
             <mat-icon>exit_to_app</mat-icon>
         </button>
     </ng-template>
 </mat-toolbar>
-<mat-tab-group id="container" color="accent" backgroundColor="primary" mat-align-tabs="center">
+<mat-tab-group class="container" color="accent" backgroundColor="primary" mat-align-tabs="center">
     <mat-tab label="Products">
         <ng-template matTabContent>
             <app-products></app-products>
@@ -22,12 +22,12 @@
             <app-basket></app-basket>
         </ng-template>
     </mat-tab>
-    <mat-tab *ngIf="isAuth() && user.role === 'admin'" label="Orders">
+    <mat-tab *ngIf="isAuth && user?.role === role.admin" label="Orders">
         <ng-template matTabContent>
             <app-orders></app-orders>
         </ng-template>
     </mat-tab>
 </mat-tab-group>
-<mat-toolbar id="copyright" color="primary">
+<mat-toolbar class="copyright" color="primary">
     <span>&copy; 2019-2021 Ermolenko V.A.</span>
 </mat-toolbar>
