--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,28 @@
         </button>
     </ng-template>
 </mat-toolbar>
-<mat-tab-group class="container" color="accent" backgroundColor="primary" mat-align-tabs="center">
+<div class="container">
+    <nav mat-tab-nav-bar color="accent" backgroundColor="primary" mat-align-tabs="center">
+        <a mat-tab-link
+           routerLinkActive
+           #rlaProducts="routerLinkActive"
+           [active]="rlaProducts.isActive"
+           routerLink="products">Products</a>
+        <a mat-tab-link
+           routerLinkActive
+           #rlaBasket="routerLinkActive"
+           [active]="rlaBasket.isActive"
+           routerLink="basket">Basket</a>
+        <a *ngIf="isAuth && user?.role === role.admin"
+           mat-tab-link
+           routerLinkActive
+           #rlaOrders="routerLinkActive"
+           [active]="rlaOrders.isActive"
+           routerLink="orders">Orders</a>
+    </nav>
+    <router-outlet></router-outlet>
+</div>
+<!--<mat-tab-group class="container" color="accent" backgroundColor="primary" mat-align-tabs="center">
     <mat-tab label="Products">
         <ng-template matTabContent>
             <app-products></app-products>
@@ -27,7 +48,7 @@
             <app-orders></app-orders>
         </ng-template>
     </mat-tab>
-</mat-tab-group>
+</mat-tab-group>-->
 <mat-toolbar class="copyright" color="primary">
     <span>&copy; 2019-2021 Ermolenko V.A.</span>
 </mat-toolbar>
